# looma

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  claude.md  render.yaml  run.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  jobs.py  main.py  models.py
backend/app/pipeline/: __init__.py  extract.py  ingest.py  narrate.py  orchestrator.py  transcribe.py
backend/app/prompts/: extract_system.txt  extract_user.txt
backend/app/storage/: __init__.py  files.py  jobs.py
backend/tests/: __init__.py  conftest.py  test_api_async_extract.py  test_api_audio.py  test_api_extract.py  test_api_jobs.py  test_error_handling_ac11.py  test_extract.py  test_frontend_js.py  test_frontend_serving.py  test_ingest.py  test_narrate.py  test_orchestrator.py  test_performance_ac10.py  test_readme_ac12.py  test_startup_guards_ac14.py  test_storage_files.py  test_storage_jobs.py  test_suite_ac13.py  test_transcribe.py
backend/tests/fixtures/: llm_extract_response.json  sample_transcription.json
docs/plans/: 059914cb-2636-4440-b1cd-64c99f4b23e0.md  ac94fa87-0407-4a71-b4eb-8c61dc4d89ce.md  code-review-analysis.md  deployment-analysis.md  start-project.md  分析下-humanizeplanning-sessions059914cb-26-b9976816-2e99-4276-b416-7606cc32a796.md  新问题-现在发了请求后解析时间比较久导致超时了-这个怎么设计下-a-timeou-4f11cc32-3e2c-4cce-8816-e80cf576fa9f.md
frontend/: app.js  index.html  styles.css
